--- a/src/assets/fonts/material-icons/material-icons.scss
+++ b/src/assets/fonts/material-icons/material-icons.scss
@@ -23,5 +23,8 @@
     font-feature-settings: 'liga';
 
     &--bold { font-weight: 700;}
+    &--color50 {color: $Dark-shade-50;}
+    &--color-primary {color: $Purple;}
+    &--color-white {color: white;}
 
 }
