--- a/src/components/filter-date-dropdown/filter-date-dropdown.pug
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.pug
@@ -1,4 +1,5 @@
-form
-    h3 filter date dropdown
-    button(type="button" autocomplete="off").filter-date-dropdown
-        | 19 авг - 23 авг
+mixin filterDate
+    form.filter-date
+        button(type="button" autocomplete="off").filter-date__dropdown
+            | 19 авг - 23 авг
+        i.material-icons.material-icons--color50.material-icons--bold.filter-date__icon expand_more
