--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -34,7 +34,7 @@
         width: 100%;
         outline: none;
         position: absolute;
-        top: 0;
+        top: -2px;
         bottom: 0;
         background-color: transparent;
         pointer-events: none;
