--- a/src/index.pug
+++ b/src/index.pug
@@ -5,7 +5,8 @@ block header
 
 block content
     .main 
-        p dsdasda
+        include pages\UI-kit\__form-elements\form-elements.pug
+        //- include \pages\UI-kit\__cards\cards.pug
 
 block footer
     include components/__headers&footers/__footer/footer.pug
