--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -95,6 +95,9 @@
     .footer__nav:last-of-type {
         width: 100%;
         text-align: center;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
     }
 }
 
@@ -118,6 +121,7 @@
         align-items: center;
         margin: 0;
         row-gap: 25px;
+        text-align: center;
     }
     .footer {
         padding: 8.143em 1em;
