--- a/src/components/__headers&footers/__header/__header-menu/header-menu.pug
+++ b/src/components/__headers&footers/__header/__header-menu/header-menu.pug
@@ -3,7 +3,7 @@ mixin header-menu(about='О нас', service='Услуги', vacancies='Вака
     .header__menu 
         a(href="#").header__link.header__link--active= about
         a(href="#").header__link.header__link--drop= service
-            span.material-icons.header__link--drop-icon expand_more
+            span.material-icons.material-icons--color50.material-icons--bold.header__link--drop-icon expand_more
             ul.header__link-menu
                 li.header__link-item Услуга один
                 li.header__link-item Услуга два
@@ -11,7 +11,7 @@ mixin header-menu(about='О нас', service='Услуги', vacancies='Вака
         a(href="#").header__link= vacancies
         a(href="#").header__link= news
         a(href="#").header__link.header__link--drop= agreements
-            span.material-icons.md-color50.header__link--drop-icon expand_more
+            span.material-icons.material-icons--color50.material-icons--bold.header__link--drop-icon expand_more
             ul.header__link-menu
                 li.header__link-item Соглашение один
                 li.header__link-item Соглашение два
