--- a/src/components/buttons/button-big.pug
+++ b/src/components/buttons/button-big.pug
@@ -1,3 +1,4 @@
 mixin buttonBig(text='click me')
     .button(class=attributes.class)
         button(type='submit').button__submit.button__submit--big= text
+        i.material-icons.material-icons--color-white.button__icon arrow_forward
