--- a/src/components/buttons/buttons.scss
+++ b/src/components/buttons/buttons.scss
@@ -91,22 +91,25 @@
         font-size: 12px;
         line-height: 15px;
         position: relative;
-        &::after {
-            position: absolute;
-            content: '';
-            top: 0;
-            right: 0;
-            width: 44px;
-            height: 44px;
-            background: url(../assets/images/arrow__forward--white.svg);
-            background-repeat: no-repeat;
-            background-position: center;
-        }
         &:hover {
             opacity: 0.5;
         }
         &:active {
             transform: translate(0.5px, 0.5px);
+            & ~ .button__icon {
+                transform: translate(0.5px, 0.5px);
+            }
         }
+    }
+}
+.button {
+    position: relative;
+    width: fit-content;
+    &__icon {
+        position: absolute;
+        top: 0.4em;
+        right: 0.3em;
+        pointer-events: none;
+        z-index: 100;
     }
 }
