--- a/src/components/pagination/pagination.pug
+++ b/src/components/pagination/pagination.pug
@@ -1,4 +1,4 @@
-.pagination
-    h3 pagination
-    ul.pagination__list
-    p.pagination__text 1 – 12 из 100+ вариантов аренды
+mixin pagination
+    .pagination
+        ul.pagination__list
+        p.pagination__text 1 – 12 из 100+ вариантов аренды
