--- a/src/components/subscription-text-field/subscription-text-field.scss
+++ b/src/components/subscription-text-field/subscription-text-field.scss
@@ -2,22 +2,29 @@
 
 .subscription {
     position: relative;
-    &::after {
-        content: "";
-        position: absolute;
-        top: 2%;
-        right: 1%;
-        width: calc(100% - 239px);
-        height: calc(100% - 2px);
-        background-position: center;
-        background-image: url(../assets/images/arrow_forward.svg);
-        background-repeat: no-repeat;
-        z-index: 100;
-        pointer-events: none;
-    }
+    width: fit-content;
+    // &::after {
+        // content: "";
+        // position: absolute;
+        // top: 2%;
+        // right: 1%;
+        // width: calc(100% - 239px);
+        // height: calc(100% - 2px);
+        // background-position: center;
+        // background-image: url(../assets/images/arrow_forward.svg);
+        // background-repeat: no-repeat;
+        // z-index: 100;
+        // pointer-events: none;
+    // }
     &__email {
         @include text-field;
         max-width: 266px;
         padding-right: 2.2em;
+    }
+
+    &__arrow {
+        position: absolute;
+        top: 0.4em;
+        right: 0.3em;
     }
 }
