--- a/src/pages/UI-kit/__form-elements/form-elements.pug
+++ b/src/pages/UI-kit/__form-elements/form-elements.pug
@@ -1,42 +1,65 @@
-.ui-kit__container
-    h1(style="color: #bc9cff;") UI KIT
-    h2 TEXT FIELD
-    include ../../../components/text-field/text-field.pug
-    h2 MASKED TEXT FIELD
-    include ../../../components/masked-text-field/masked-text-field.pug
-    h2 DATE DROPDOWN
-    include ../../../components/date-dropdown/date-dropdown.pug
-    h2 FILTER DATE DROPDOWN
-    include ../../../components/filter-date-dropdown/filter-date-dropdown.pug
-    h2 SUBSCRIPTION TEXT FIELD
-    include ../../components/subscription-text-field/subscription-text-field.pug
-    h2 DROPDOWN (WITH ITEM COUNTER)
-    include ../../components/dropdown/dropdown.pug
-    h2 DROPDOWN (ROOM)
-    include ../../components/dropdown/dropdown-room.pug
-    h2 CALENDAR
-    include ../../components/calendar/calendar.pug
-    h2 EXPANDABLE CHECKBOX LIST
-    include ../../components/expandable-checkbox-list/expandable-checkbox-list.pug
-    h2 BENEFITS
-    include ../../components/benefits/benefits.pug
-    h2 RADIO BUTTONS 
-    include ../../components/radio-buttons/radio-buttons.pug
-    h2 TOGGLE 
-    include ../../components/toggle/toggle.pug
-    h2 LIKE BUTTON 
-    include ../../components/like-button/like-button.pug
-    h2 RATE BUTTON 
-    include ../../components/rate-button/rate-button.pug
-    h2 PAGINATION 
-    include ../../components/pagination/pagination.pug
-    h2 RANGE SLIDER 
-    include ../../components/range-slider/range-slider.pug
-    h2 BUTTONS 
-    include ../../components/buttons/buttons.pug
-    h2 RICH CHECKBOX BUTTONS
-    include ../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
-    h2 BULLET LIST 
-    include ../../components/bullet-list/bullet-list.pug
-    h2 COMMENT 
-    include ../../components/comment/comment.pug
+include ../../../components/text-field/text-field.pug
+include ../../../components/masked-text-field/masked-text-field.pug
+include ../../../components/date-dropdown/date-dropdown.pug
+include ../../../components/filter-date-dropdown/filter-date-dropdown.pug
+include ../../../components/subscription-text-field/subscription-text-field.pug
+include ../../../components/dropdown/dropdown.pug
+include ../../../components/dropdown/dropdown-room.pug
+include ../../../components/expandable-checkbox-list/expandable-checkbox-list.pug
+include ../../../components/benefits/benefits.pug
+include ../../../components/radio-buttons/radio-buttons.pug
+include ../../../components/toggle/toggle.pug
+include ../../../components/like-button/like-button.pug
+include ../../../components/rate-button/rate-button.pug
+include ../../../components/pagination/pagination.pug
+include ../../../components/range-slider/range-slider.pug
+include ../../../components/buttons/button-big.pug
+include ../../../components/buttons/button-no-border.pug
+include ../../../components/buttons/button-small.pug
+include ../../../components/buttons/button-transparent.pug
+include ../../../components/rich-checkbox-buttons/rich-checkbox-buttons.pug
+include ../../../components/bullet-list/bullet-list.pug
+include ../../../components/comment/comment.pug
+
+h1(style="color: #bc9cff;") UI KIT
+h2 TEXT FIELD
++textInput
+h2 MASKED TEXT FIELD
++maskedTextField
+h2 DATE DROPDOWN
++dateDouble
+h2 FILTER DATE DROPDOWN
++filterDate
+h2 SUBSCRIPTION TEXT FIELD
++subscribe
+h2 DROPDOWN (WITH ITEM COUNTER)
++dropdown
+h2 DROPDOWN (ROOM)
++dropdown-room
+h2 EXPANDABLE CHECKBOX LIST
++expandable
+h2 BENEFITS
++benefits
+h2 RADIO BUTTONS 
++radio
+h2 TOGGLE 
++toggle
+h2 LIKE BUTTON 
++like
+h2 RATE BUTTON 
++rate
+h2 PAGINATION 
++pagination
+h2 RANGE SLIDER 
++range
+h2 BUTTONS 
++buttonBig
++buttonNoBorder
++buttonSmall
++buttonTransparent
+h2 RICH CHECKBOX BUTTONS
++rich-checkbox
+h2 BULLET LIST 
++bullet
+h2 COMMENT 
++comment
