--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -3,7 +3,8 @@
 @import './layout/fonts.scss';
 
 // ui kit
-@import './../pages/UI-kit/__cards/cards.scss';
+@import '/pages/UI-kit/__cards/cards.scss';
+@import '/pages/UI-kit/__form-elements/form-elements.scss';
 @import '/components/__headers&footers/__header/header.scss';
 @import '../components/__headers&footers/__footer/footer.scss';
 
@@ -32,4 +33,5 @@ body {
 }
 .main {
     flex: 1 1 auto;
+    align-self: center;
 }
