--- a/src/components/__headers&footers/__header/header.scss
+++ b/src/components/__headers&footers/__header/header.scss
@@ -32,7 +32,7 @@
         &-text {
             width: 100%;
             height: 14px;
-            background: url(../assets/images/TOXIN.png);
+            background: url(../assets/images/TOXIN.svg);
             background-repeat: no-repeat;
         }
     }
