--- a/src/components/__cards/__room-search/room-search.pug
+++ b/src/components/__cards/__room-search/room-search.pug
@@ -2,14 +2,15 @@ include ../../date-dropdown/date-dropdown.pug
 include ../../dropdown/dropdown.pug
 include ../../buttons/button-big.pug
 
-.card
-    .card__content
-        h2.card__title Найдём номера под ваши пожелания
+mixin card-search(title='Найдём номера под ваши пожелания')
+    .card(class=attributes.class)
+        .card__content
+            h2.card__title= title
 
-        +dateDouble('прибытие', 'выезд')(class='card__date-range')
+            +dateDouble('прибытие', 'выезд')(class='card__date-range')
 
-        h3.card__suptitle гости
-        +dropdown('гости')(class='card__dropdown')
-        
-        +buttonBig('подобрать номер')(class='card__btn')
+            h3.card__suptitle гости
+            +dropdown('гости')(class='card__dropdown')
+            
+            +buttonBig('подобрать номер')(class='card__btn')
 
