--- a/src/index.pug
+++ b/src/index.pug
@@ -5,8 +5,9 @@ block header
 
 block content
     .main 
-        include pages\UI-kit\__form-elements\form-elements.pug
+        //- include pages\UI-kit\__form-elements\form-elements.pug
         //- include \pages\UI-kit\__cards\cards.pug
+        include \pages\website\__landing\__main\landing.pug
 
 block footer
     include components/__headers&footers/__footer/footer.pug
