--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -7,6 +7,7 @@
 @import '/pages/UI-kit/__form-elements/form-elements.scss';
 @import '/components/__headers&footers/__header/header.scss';
 @import '../components/__headers&footers/__footer/footer.scss';
+@import '/pages/website/__landing/__main/landing.scss';
 
 
 *,
@@ -30,8 +31,10 @@ body {
     min-height: 100%;
     display: flex;
     flex-direction: column;
+    overflow: hidden;
 }
 .main {
     flex: 1 1 auto;
     align-self: center;
+    position: relative;
 }
