--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -107,6 +107,9 @@
     }
     .footer__nav {
         display: none;
+        &:last-of-type {
+            display: none;
+        }
     }
     .footer__line {
         display: none;
