multipage-search.html

--- a/src/components/__headers&footers/__footer/footer.pug
+++ b/src/components/__headers&footers/__footer/footer.pug
@@ -5,7 +5,8 @@ footer.footer
         .footer__container
             .footer__main 
                 .footer__info
-                    img(src=require('./assets/images/logo-full.svg'), alt="alt").footer__logo 
+                    a(href="./index.html")
+                        img(src=require('./assets/images/logo-full.svg'), alt="alt").footer__logo 
                     p.footer__text Бронирование номеров в лучшем отеле 2019 года по версии ассоциации «Отельные взгляды» 
                 
                 ul.footer__nav
