--- a/src/components/__headers&footers/__header/header.pug
+++ b/src/components/__headers&footers/__header/header.pug
@@ -6,10 +6,11 @@ include ./__header-menu/header-menu.pug
 
 .header 
     .inner-container    
-        .header__container 
-            .header__logo 
-                .header__logo-svg 
-                .header__logo-text 
+        .header__container
+            a(href="./index.html")
+                .header__logo 
+                    .header__logo-svg 
+                    .header__logo-text 
             .header__content
 
                 +header-menu('О нас', 'Услуги', 'Вакансии', 'Новости', 'Соглашения')
