--- a/src/components/filter-date-dropdown/filter-date-dropdown.pug
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.pug
@@ -1,5 +1,4 @@
 mixin filterDate
     form.filter-date(class=attributes.class)
-        button(type="button" autocomplete="off").filter-date__dropdown
-            | 19 авг - 23 авг
+        input(type="text" spellcheck="false").filter-date__dropdown.datepicker-one
         i.material-icons.material-icons--color50.material-icons--bold.filter-date__icon expand_more
