--- a/src/components/filter-date-dropdown/filter-date-dropdown.scss
+++ b/src/components/filter-date-dropdown/filter-date-dropdown.scss
@@ -9,6 +9,9 @@
     &__dropdown {
         @include text-field;
         max-width: 266px;
+        caret-color: #fff;
+        cursor: pointer;
+        text-transform: lowercase;
         &:focus ~ .filter-date__icon {
             color: $Dark-shade-75;
         }
