--- a/src/pages/website/__search-room/search-room.pug
+++ b/src/pages/website/__search-room/search-room.pug
@@ -26,6 +26,8 @@ include ..\..\..\components\expandable-checkbox-list\expandable-checkbox-list.pu
             +dropdown-room
             +expandable('Дополнительные удобства')(class='search__information-expandable')
         .search__main
+            .search__nav
+                i.material-icons.material-icons--color50.material-icons--bold.search__nav-icon double_arrow
             h2.search__main-title Номера, которые мы для вас подобрали
             .search__apartments#products__list
                 //- .products
