--- a/src/components/__headers&footers/__header/__header-menu/header-menu.scss
+++ b/src/components/__headers&footers/__header/__header-menu/header-menu.scss
@@ -1,5 +1,5 @@
 .header {
-    z-index: 10;
+    z-index: 100;
     &__link {
         color: $Dark-shade-50;
         text-decoration: none;
@@ -56,22 +56,29 @@
     z-index: 10;
     &__menu {
         position: absolute;
-        top: 50%;
-        left: 50%;
-        transform: translate(-50%, -50%);
+        top: 0;
+        right: -30rem;
+        width: fit-content;
+        height: 100vh;
+        padding: 4rem 5rem;
+        display: flex;
+        // transform: translate(-50%, -50%);
         margin: 0 auto;
-        display: none;
         flex-direction: column;
-        justify-content: center;
+        justify-content: flex-start;
         text-align: center;
-        color: #fff;
-        row-gap: 0.5em;
-        background: $Dark-shade-50;
-        width: 100%;
-        height: 100%;
+        color: $Dark-shade-75;
+        row-gap: 0.2em;
+        background: white;
         z-index: 9;
+        transition: all ease .3s;
+        opacity: 0;
         &--active {
-            display: flex;
+            opacity: 1;
+            right: 0;
+            row-gap: 1em;
+            filter: drop-shadow(0 10px 20px rgba(31,32,65, 5%));
+            position: fixed;
         }
     }
 }
