--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -12,6 +12,7 @@
     --adp-cell-background-color-selected: linear-gradient(rgb(188, 156, 255) 0%, #8ba4f9 100%);
     --adp-pointer-size: none;
     font-family: "Montserrat", sans-serif;
+    box-sizing: border-box;
 }
 
 .air-datepicker-nav {
@@ -156,5 +157,3 @@ color: $Dark-shade-50;
     font-size: 12px;
     font-family: "Montserrat", sans-serif;
 }
-
-
