--- a/src/pages/website/__landing/landing.scss
+++ b/src/pages/website/__landing/landing.scss
@@ -16,6 +16,7 @@
         position: absolute;
         top: 5em;
         left: 10em;
+        z-index: 10;
     }
     &__text {
         position: absolute;
@@ -42,5 +43,21 @@
         width: fit-content;
         left: 50%;
         transform: translate(-50%, -50%);
+    }
+    .date-form__inp {
+        max-width: 17.715rem;
+    }
+    .date-form {
+        flex-direction: column;
+        row-gap: 2.6rem;
+    }
+    .landing__room-search {
+        width: 22rem;
+    }
+    .button__submit--big {
+        width: 17.715rem;
+    }
+    .landing__text {
+        display: none;
     }
 }
