--- a/src/components/date-dropdown/date-dropdown.scss
+++ b/src/components/date-dropdown/date-dropdown.scss
@@ -25,6 +25,7 @@
         position: absolute;
         top: 0.4em;
         right: 0.3em;
+        pointer-events: none;
     }
     &__inp {
         max-width: 150px;
