--- a/src/components/__cards/__products/products.scss
+++ b/src/components/__cards/__products/products.scss
@@ -37,8 +37,7 @@
     &__img {
         height: 151.38px;
         border-radius: 4px 4px 0 0;
-        max-width: 270px;
-        width: 100%;
+        width: 270px;
         position: relative;
     }
 
@@ -119,7 +118,7 @@
     &__content {
         display: flex;
         flex-direction: column;
-        margin: 13px 17px 19px 20px;
+        margin: 20px 17px 19px 20px;
     }
     &__about {
         display: flex;
