--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -14,7 +14,7 @@
         justify-content: space-between;
         align-items: flex-start;
         column-gap: 4em;
-        margin: 100px 0;
+        margin: 6rem 0;
     }
 
     &__nav {
@@ -41,11 +41,17 @@
             color: $Dark-shade-25;
         }
     }
+    &__info {
+        margin-top: 1rem;
+        max-width: 260px;
+        width: 100%;
+    }
 
     &__text {
         font-weight: 400;
         color: $Dark-shade-50;
         white-space: break-spaces;
+        line-height: 22px;
     }
 
     &__line {
