--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -37,7 +37,7 @@ body {
     position: relative;
 }
 .inner-container {
-    padding: 0 10%;
+    padding: 0 10rem;
 }
 
 @media (max-width: 1190px) {
