--- a/src/components/__headers&footers/__footer/footer.scss
+++ b/src/components/__headers&footers/__footer/footer.scss
@@ -3,6 +3,7 @@
 .footer {
     background: white;
     filter: drop-shadow(0 10px 20px rgba(31,32,65, 10%));
+    border-top: 1px solid $Dark-shade-25;
 
     &__container {
         display: flex;
