--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -9,6 +9,7 @@
 
 @import '/pages/website/__search-room/search-room.scss';
 @import '/pages/website/__landing/landing.scss';
+@import '/pages/website/__room-details/room-details.scss';
 
 *,
 *::after,
