--- a/src/assets/fonts/material-icons/material-icons.scss
+++ b/src/assets/fonts/material-icons/material-icons.scss
@@ -25,6 +25,6 @@
     &--bold { font-weight: 700;}
     &--color50 {color: $Dark-shade-50;}
     &--color-primary {color: $Purple;}
-    &--color-white {color: white;}
+    &--color-white {color: #fff;}
 
 }
