--- a/src/components/benefits/benefits.scss
+++ b/src/components/benefits/benefits.scss
@@ -4,7 +4,7 @@
     display: flex;
     column-gap: 1em;
     border-bottom: 1px solid $Dark-shade-10;
-    max-width: 280px;
+    width: 280px;
 
     &__text-name {
         margin-bottom: 0;
