--- a/src/components/benefits/benefits.pug
+++ b/src/components/benefits/benefits.pug
@@ -9,3 +9,8 @@ mixin benefits
         .benefits-location__text
             h3.benefits__text-name Удобство
             p.benefits__text-description Окно в каждой из спален
+    .benefits
+        img(src=require('./assets/images/whatshot.svg'), alt="alt").benefits__svg 
+        .benefits-location__text
+            h3.benefits__text-name Уют
+            p.benefits__text-description Номер оснещён камином
