--- a/src/components/comment/comment.scss
+++ b/src/components/comment/comment.scss
@@ -21,4 +21,8 @@
     &__text {
         margin-top: 0.7rem;
     }
+
+    &__image {
+        filter: drop-shadow(0px 10px 20px rgba(31, 32, 65, 0.1));
+    }
 }
