--- a/src/components/like-button/like-button.pug
+++ b/src/components/like-button/like-button.pug
@@ -1,3 +1,4 @@
-mixin like
+mixin like(value='12')
     .like-btn(class=attributes.class)
         .like-btn__content
+            .like-btn__value= value
