--- a/src/assets/fonts/material-icons/material-icons.scss
+++ b/src/assets/fonts/material-icons/material-icons.scss
@@ -2,7 +2,8 @@
     font-family: 'Material Icons';
     font-weight: normal;
     font-style: normal;
-    font-size: 24px;  /* Preferred icon size */
+    font-size: 24px;
+    /* Preferred icon size */
     display: inline-block;
     line-height: 1;
     text-transform: none;
@@ -22,9 +23,20 @@
     /* Support for IE. */
     font-feature-settings: 'liga';
 
-    &--bold { font-weight: 700;}
-    &--color50 {color: $Dark-shade-50;}
-    &--color-primary {color: $Purple;}
-    &--color-white {color: #fff;}
+    &--bold {
+        font-weight: 700;
+    }
+
+    &--color50 {
+        color: $Dark-shade-50;
+    }
+
+    &--color-primary {
+        color: $Purple;
+    }
+
+    &--color-white {
+        color: #fff;
+    }
 
 }
