--- a/src/components/__cards/cards.scss
+++ b/src/components/__cards/cards.scss
@@ -3,51 +3,62 @@
     width: min-content;
     background: white;
     border-radius: 4px;
-    filter: drop-shadow(0 0px 25px rgba(31,32,65, 20%));
+    filter: drop-shadow(0 0px 25px rgba(31, 32, 65, 20%));
+
     &__date-range {
         margin-top: 41.44px;
     }
+
     &__content {
         padding: 40px 30px 30px 30px;
         display: flex;
         flex-direction: column;
+
         & .text:not(:last-of-type) {
             margin-bottom: 10px;
         }
     }
-    &__slider ~ &__content {
-        margin:0 20px 20px 20px;
+
+    &__slider~&__content {
+        margin: 0 20px 20px 20px;
     }
+
     &__line {
         width: 100%;
         height: 1px;
         background: rgba(31, 32, 65, 0.1);
         margin-top: 12px;
     }
+
     &__rate {
         margin-top: 8px;
         display: flex;
         justify-content: space-between;
 
     }
+
     &__text {
         color: $Dark-shade-50;
         font-family: inherit;
         font-weight: 700;
+
         &--normal {
             font-weight: 400;
             text-transform: capitalize;
         }
     }
+
     &__input:not(:last-of-type) {
         margin-bottom: 10px;
     }
+
     &__login {
         margin-top: 30px;
         display: flex;
         justify-content: space-between;
         align-items: center;
     }
+
     &__title {
         font-size: 24px;
         font-weight: 700;
@@ -56,15 +67,19 @@
         margin: 0;
         width: 100%;
     }
+
     &__radio {
         margin-top: 10px;
     }
+
     &__btn {
         margin-top: 2.2em;
     }
+
     &__toggle {
         margin-top: 10px;
     }
+
     &__suptitle {
         margin-top: 20px;
         font-size: 12px;
@@ -78,11 +93,13 @@
     &__price {
         display: flex;
         margin-top: 30px;
+
         &-line {
             width: 100%;
             height: 23px;
             border-bottom: 1px dotted $Dark-shade-25;
         }
+
         &-sum {
             white-space: nowrap;
             font-size: 24px;
@@ -102,11 +119,13 @@
         color: $Dark-shade-75;
         font-size: 14px;
         line-height: 24px;
+
         &-info {
             display: flex;
             align-items: center;
 
         }
+
         &-img {
             margin-left: 5px;
             cursor: pointer;
