--- a/src/components/calendar/calendar.scss
+++ b/src/components/calendar/calendar.scss
@@ -20,6 +20,7 @@
         color: $Dark-shade-100;
         font-size: 19px;
         font-weight: 700;
+
         & i {
             color: $Dark-shade-100;
         }
@@ -38,18 +39,21 @@
         background: url(../assets/images/arrow_forward.svg);
         background-repeat: no-repeat;
         background-position: center;
+
         &:first-of-type {
             transform: rotate(180deg);
         }
+
         &:hover {
             background: url(../assets/images/arrow_forward.svg);
             background-repeat: no-repeat;
             background-position: center;
         }
+
         & svg path {
             display: none;
         }
-}
+    }
 }
 
 
@@ -58,6 +62,7 @@
     padding-left: 20px;
     padding-right: 20px;
 }
+
 .-day- {
     width: 40px;
     height: 40px;
@@ -65,31 +70,38 @@
     font-size: 12px;
     color: $Dark-shade-50;
 }
+
 .-day-.-current- {
     color: white;
     background: $Secondary-gradient;
     border-radius: 50%;
 }
+
 .-day-.-current-.-focus- {
     color: white;
 }
+
 .-day-.-selected- {
     color: white;
     background: $Primary-gradient;
     border-radius: 50%;
 }
+
 .-day-.-selected-.-focus- {
     background: $Primary-gradient;
     border-radius: 50%;
 }
+
 .-day-.-selected-.-range-from- {
     border-radius: 50%;
 }
+
 .-day-.-range-from- {
     border: none;
     border-radius: 50%;
     background: $Primary-gradient;
     color: white;
+
     &::after {
         content: '';
         position: absolute;
@@ -101,11 +113,13 @@
         z-index: -1;
     }
 }
+
 .-day-.-range-to- {
     border: none;
     border-radius: 50%;
     background: $Primary-gradient;
     color: white;
+
     &::before {
         content: '';
         position: absolute;
@@ -117,31 +131,41 @@
         z-index: -1;
     }
 }
+
 .-day-.-in-range- {
     background: $Primary-gradient--opacity;
 }
+
 .-day-.-focus-.-in-range- {
     background: $Primary-gradient--opacity;
 }
+
 .-day-.-other-month-.-focus-.-in-range- {
     background: red;
 }
+
 .-disabled- {
-color: $Dark-shade-50;
+    color: $Dark-shade-50;
 }
+
 .-other-month- {
     color: $Dark-shade-25;
 }
+
 .-focus- {
     color: $Dark-shade-25;
 }
+
 .-day-.-other-month-.-selected-.-range-from- {
     background: $Primary-gradient;
 }
+
 .-day-.-other-month-.-selected-.-range-to- {
     background: $Primary-gradient;
 }
-.-in-range-.air-datepicker-cell.-day-.-other-month-, .-in-range-.air-datepicker-cell.-year-.-other-decade- {
+
+.-in-range-.air-datepicker-cell.-day-.-other-month-,
+.-in-range-.air-datepicker-cell.-year-.-other-decade- {
     background: $Primary-gradient--opacity;
     color: $Dark-shade-25;
 }
@@ -150,6 +174,7 @@ color: $Dark-shade-50;
 .air-datepicker-buttons {
     grid-gap: 80px;
 }
+
 .air-datepicker-button {
     color: $Purple;
     font-weight: 700;
