--- a/src/components/range-slider/range-slider.scss
+++ b/src/components/range-slider/range-slider.scss
@@ -1,9 +1,11 @@
 .range {
     max-width: 266px;
     width: 100%;
+
     &__form {
         position: relative;
     }
+
     &__track {
         width: 100%;
         height: 6px;
@@ -13,22 +15,22 @@
         position: absolute;
         top: 0;
         bottom: 0;
+
         .track-line {
             position: absolute;
             height: 6px;
             width: 100%;
-            background: linear-gradient(
-                to right,
-                rgba(255, 255, 255, 0) 30%,
-                #6fcf97 30%,
-                #66d2ea 70%,
-                rgba(255, 255, 255, 0) 70%
-            );
+            background: linear-gradient(to right,
+                    rgba(255, 255, 255, 0) 30%,
+                    #6fcf97 30%,
+                    #66d2ea 70%,
+                    rgba(255, 255, 255, 0) 70%);
             top: -1px;
             left: 0;
             border-radius: 3px;
         }
     }
+
     &__slider {
         appearance: none;
         width: 100%;
@@ -38,10 +40,12 @@
         bottom: 0;
         background-color: transparent;
         pointer-events: none;
+
         &::-webkit-slider-runnable-track {
             appearance: none;
             height: 6px;
         }
+
         &::-webkit-slider-thumb {
             appearance: none;
             width: 12px;
@@ -51,12 +55,14 @@
             border-radius: 50%;
             cursor: pointer;
             pointer-events: auto;
+
             &:active {
                 background: $Primary-gradient;
                 border: 2px solid #fff;
             }
         }
     }
+
     &__value {
         color: $Dark-shade-50;
         text-align: right;
